fixed styling on mobile

--- a/app/styles/global/helpers.scss
+++ b/app/styles/global/helpers.scss
@@ -152,7 +152,7 @@ $light-green: #00AA59;
   background: $white;
   color: $black;
   border: 2px solid $grey-one;
-  width: 60%;
+  width: 80%;
   border-radius: 4px;
   font-size: 16px;
   font-family: "soleil",sans-serif;
